Updated LayerUtils so getResourceOrFileOrURL works better finding resources in the codebase for applets
git-svn-id: svn+ssh://src.dsl.bbn.com/svn/openmap/trunk@645 f68c23cc-7f87-4fbc-acfa-d9760b90acc1